--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1409,11 +1409,12 @@ table.gwittir-BoundTable.editable tr.odd td {
 	display: inline-block;
 	text-align: left;
 	zoom: 1;
-	display: inline\9
+	*display:inline;
 }
 
 .inlineTabDisplay .gwt-HTML {
 	padding-right: 1em;
+	zoom: 1;
 	display: inline;
 }
 
