* fast lookups for transform manager * change to linkedhashmap/set in a bunch of places - faster gwt iterators

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -568,6 +568,10 @@ input.button-submit,button.button-submit {
 	font-weight: bold;
 }
 
+.right {
+	text-align: right;
+}
+
 .italic {
 	font-style: italic;
 }
