more memcache-related

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -440,7 +440,7 @@ a.b-link span {
 }
 
 a.b-return span {
-	background: url(_pix/icon-return.gif) 0 0 no-repeat;
+	background: url(_pix/icon-return-2.gif) 0 0 no-repeat;
 	padding-left: 20px;
 }
 
