--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1,6 +1,6 @@
 /* General & Main Containers ######################################################### */
 /* Top-level containers */ /* reset the gwt body etc definition */
-body,table td,select {
+body, table td, select {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 }
@@ -94,7 +94,7 @@ div.alcina-MainContent div.alcina-NoLayoutContentRight {
 	text-decoration: underline;
 }
 
-div.alcina-ContentLeft div input.small,table.alcina-ContentLeft div input.small
+div.alcina-ContentLeft div input.small, table.alcina-ContentLeft div input.small
 	{
 	width: 90px;
 }
@@ -104,8 +104,9 @@ div.alcina-MainContent.content-100pc-lhs {
 	margin-bottom: 0px;
 }
 /* Main menu */
-table.alcina-MainMenu .gwt-TabBar .gwt-TabBarItem-selected a,table.alcina-MainMenu .gwt-TabBar  .gwt-TabBarItem-selected a:active,table.alcina-MainMenu .gwt-TabBar .gwt-TabBarItem-selected a:visited,table.alcina-MainMenu .gwt-TabBar  .gwt-TabBarItem-selected a:hover
-	{
+table.alcina-MainMenu .gwt-TabBar .gwt-TabBarItem-selected a, table.alcina-MainMenu .gwt-TabBar  .gwt-TabBarItem-selected a:active,
+	table.alcina-MainMenu .gwt-TabBar .gwt-TabBarItem-selected a:visited,
+	table.alcina-MainMenu .gwt-TabBar  .gwt-TabBarItem-selected a:hover {
 	background-color: #104860;
 	font-weight: bold;
 	white-space: nowrap;
@@ -118,8 +119,8 @@ table.mainTabPanel .alcina-MainMenu {
 	border-bottom: 4px solid #104860;
 }
 
-.alcina-MainMenu a,.alcina-MainMenu a:link,.alcina-MainMenu a:visited,.alcina-MainMenu a:active
-	{
+.alcina-MainMenu a, .alcina-MainMenu a:link, .alcina-MainMenu a:visited,
+	.alcina-MainMenu a:active {
 	padding: 7px 15px 7px 15px;
 	color: #ffffff;
 	display: block;
@@ -131,8 +132,8 @@ table.mainTabPanel .alcina-MainMenu {
 	white-space: nowrap;
 }
 
-.alcina-MainMenu .gwt-TabBarItem a,.alcina-MainMenu .gwt-TabBarItem a:active,.alcina-MainMenu .gwt-TabBarItem a:visited
-	{
+.alcina-MainMenu .gwt-TabBarItem a, .alcina-MainMenu .gwt-TabBarItem a:active,
+	.alcina-MainMenu .gwt-TabBarItem a:visited {
 	background-position: right bottom;
 }
 
@@ -147,8 +148,8 @@ table.mainTabPanel .alcina-MainMenu {
 	white-space: nowrap;
 }
 
-.alcina-MainMenuRight a,.alcina-MainMenuRight a:active,.alcina-MainMenuRight a:visited
-	{
+.alcina-MainMenuRight a, .alcina-MainMenuRight a:active,
+	.alcina-MainMenuRight a:visited {
 	background-position: left bottom;
 	float: right;
 }
@@ -211,7 +212,7 @@ div.alcina-BreadcrumbBar div.right {
 	background: url(_pix/bg-seperator-toolbar.gif) left bottom repeat-y;
 }
 
-div.alcina-BreadcrumbBar div.right a.button,div.alcina-BreadcrumbBar div.right a.dropdown
+div.alcina-BreadcrumbBar div.right a.button, div.alcina-BreadcrumbBar div.right a.dropdown
 	{
 	padding: 6px 8px;
 	display: block;
@@ -227,7 +228,7 @@ div.alcina-BreadcrumbBar div a.dropdown:hover {
 	background: url(_pix/breadcrumb-dropdown-over.png) right bottom repeat-y;
 }
 
-div.alcina-BreadcrumbBar div a.button:hover,div.alcina-BreadcrumbBar div a.dropdown:hover
+div.alcina-BreadcrumbBar div a.button:hover, div.alcina-BreadcrumbBar div a.dropdown:hover
 	{
 	background-color: #f4f4f4;
 }
@@ -252,13 +253,13 @@ div.alcina-BreadcrumbBar p.date {
 	width: 100px;
 }
 
-.alcina-BreadcrumbBar a:link,.alcina-BreadcrumbBar a:visited,.alcina-BreadcrumbBar a:active
-	{
+.alcina-BreadcrumbBar a:link, .alcina-BreadcrumbBar a:visited,
+	.alcina-BreadcrumbBar a:active {
 	color: #717171;
 	text-decoration: none;
 }
 
-.alcina-BreadcrumbBar a:hover,.link-black a:hover {
+.alcina-BreadcrumbBar a:hover, .link-black a:hover {
 	text-decoration: underline;
 }
 
@@ -316,7 +317,7 @@ h1 {
 }
 
 /* Links ######################################################### */
-a,a:link,a:visited,a:active {
+a, a:link, a:visited, a:active {
 	color: #227e4d;
 	text-decoration: underline
 }
@@ -326,11 +327,12 @@ a:hover {
 	cursor: pointer;
 }
 
-div.gwt-TabBarItem input:focus,div.gwt-TabBarItem input {
+div.gwt-TabBarItem input:focus, div.gwt-TabBarItem input {
 	outline-width: 0;
 }
 
-.alcina-Footer a:link,.alcina-Footer a:visited,.alcina-Footer a:active {
+.alcina-Footer a:link, .alcina-Footer a:visited, .alcina-Footer a:active
+	{
 	color: #c7d7dd;
 	text-decoration: underline
 }
@@ -339,7 +341,7 @@ div.gwt-TabBarItem input:focus,div.gwt-TabBarItem input {
 	color: #ffffff;
 }
 
-.link-black a:link,.link-black a:visited,.link-black a:active {
+.link-black a:link, .link-black a:visited, .link-black a:active {
 	color: #000;
 	text-decoration: none;
 }
@@ -349,7 +351,7 @@ div.gwt-TabBarItem input:focus,div.gwt-TabBarItem input {
 }
 
 /* Buttons ######################################################### */
-a.button-grey,a.button-grey:active,a.button-grey:visited,a.button-grey.disabled:hover
+a.button-grey, a.button-grey:active, a.button-grey:visited, a.button-grey.disabled:hover
 	{
 	background: #e9e9e9;
 	border: 1px solid #cdcdcd;
@@ -362,12 +364,12 @@ a.button-grey,a.button-grey:active,a.button-grey:visited,a.button-grey.disabled:
 	line-height: 1em;
 }
 
-a.button-grey.disabled,a.button-grey.disabled:hover {
+a.button-grey.disabled, a.button-grey.disabled:hover {
 	color: #777777;
 }
 
-.alcina-ToolbarSmall a.button-grey,.alcina-ToolbarSmall a.button-grey:active,.alcina-ToolbarSmall a.button-grey:visited
-	{
+.alcina-ToolbarSmall a.button-grey, .alcina-ToolbarSmall a.button-grey:active,
+	.alcina-ToolbarSmall a.button-grey:visited {
 	background: #e9e9e9;
 	border: 1px solid #cdcdcd;
 	color: #333333;
@@ -383,7 +385,7 @@ a.button-grey.disabled,a.button-grey.disabled:hover {
 	padding: 3px;
 }
 
-a.button-grey:hover,.alcina-ToolbarSmall a.button-grey:hover {
+a.button-grey:hover, .alcina-ToolbarSmall a.button-grey:hover {
 	color: #333333;
 	background: #ffffff url(_pix/bg-button-large-grey.gif) bottom left
 		repeat-x;
@@ -493,12 +495,12 @@ form {
 	margin: 0;
 }
 
-input,select,textarea {
+input, select, textarea {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 1em;
 }
 
-input.button-submit,button.button-submit {
+input.button-submit, button.button-submit {
 	background: #78a3b6 url(_pix/bg-button-blue.gif) left top repeat;
 	border: 1px solid #114a62;
 	font-family: Arial, Helvetica, sans-serif;
@@ -664,7 +666,7 @@ div.pad-top-0 {
 	position: relative;
 }
 
-input.wide-text,td.wide-text input {
+input.wide-text, td.wide-text input {
 	width: 450px;
 }
 /** Specific alcina elements (misc) **/
@@ -674,7 +676,7 @@ input.wide-text,td.wide-text input {
 }
 
 /* Tables ######################################################### */
-table.home,div.alcina-GeneralContentHolder,div.wizard {
+table.home, div.alcina-GeneralContentHolder, div.wizard {
 	width: 100%;
 	border: 1px solid #cdcdcd;
 	background: #fff;
@@ -752,7 +754,7 @@ table.gwittir-GridForm table.alcina-SelectorFrame td {
 	padding: 0px;
 }
 
-div.alcina-Selector .chooser-item.selected,div.select-item-container .chooser-item.selected
+div.alcina-Selector .chooser-item.selected, div.select-item-container .chooser-item.selected
 	{
 	background-color: #A8D3E6;
 }
@@ -799,7 +801,7 @@ div.alcina-Selector div.select-item-container {
 	padding-left: 4px;
 }
 
-div.alcina-Selector a,div.alcina-Selector a:link,div.alcina-Selector a:visited
+div.alcina-Selector a, div.alcina-Selector a:link, div.alcina-Selector a:visited
 	{
 	color: black;
 	text-decoration: none;
@@ -958,7 +960,7 @@ div.alcina-ObjectTree .results-table {
 	width: 100%;
 }
 
-div.alcina-ObjectTree .alcina-Selector .group-heading,.alcina-Selector .popupContent .group-heading
+div.alcina-ObjectTree .alcina-Selector .group-heading, .alcina-Selector .popupContent .group-heading
 	{
 	color: #717171;
 	background-color: #f4f4f4;
@@ -995,7 +997,7 @@ table.results-table {
 	border: solid 1px #FCC;
 }
 
-.gwittir-ValidationPopup.dateChooser,.gwittir-ValidationPopup.withBkg {
+.gwittir-ValidationPopup.dateChooser, .gwittir-ValidationPopup.withBkg {
 	border: 1px solid rgb(206, 206, 206);
 	padding: 1px 4px 1px 4px;
 	background-color: white;
@@ -1012,7 +1014,7 @@ table.results-table {
 	color: black;
 }
 
-.login-error,.error {
+.login-error, .error {
 	color: #ff3333;
 }
 
@@ -1124,7 +1126,8 @@ div.table-toolbar {
 	padding-bottom: 5px;
 }
 
-div.table-toolbar a.button-grey,div.table-toolbar a.button-grey:active,div.table-toolbar a.button-grey:visited,div.table-toolbar a.button-grey:hover
+div.table-toolbar a.button-grey, div.table-toolbar a.button-grey:active,
+	div.table-toolbar a.button-grey:visited, div.table-toolbar a.button-grey:hover
 	{
 	margin-left: 20px;
 }
@@ -1199,7 +1202,7 @@ div.alcina-MainContent div.workspaceViews.alcina-ContentLeft {
 	padding: 5px 0 5px 0;
 }
 /** Date picker (now gwt) stuff **/
-input.calendarText.alcina-DateBox,div.alcina-ObjectTree  input.gwt-DateBox.alcina-DateBox
+input.calendarText.alcina-DateBox, div.alcina-ObjectTree  input.gwt-DateBox.alcina-DateBox
 	{
 	border: 1px solid #CECECE;
 	padding: 1px 4px 1px 4px;
@@ -1229,20 +1232,25 @@ table.gwittir-BoundTable .rowHandleCheckbox {
 	padding: 0px 5px 0px 5px;
 }
 
-table.gwittir-BoundTable,table.gwittir-GridForm {
+table.gwittir-BoundTable, table.gwittir-GridForm {
 	font-size: 0.9em;
 }
 
-table.gwittir-BoundTable td,table.gwittir-GridForm td {
+table.gwittir-BoundTable td, table.gwittir-GridForm td {
 	padding: 2px 12px 2px 2px;
 	border: none;
 	color: #222222;
 	vertical-align: top;
 }
 
-table.gwittir-BoundTable .no-content,.alcina-widgetList .no-content {
+table.gwittir-BoundTable .no-content, .alcina-widgetList .no-content,
+	.alcina-cellTable.no-content {
 	padding: 15px;
 	text-align: center;
+}
+
+.alcina-cellTable {
+	border: 1px solid #CECECE;
 }
 
 table.gwittir-GridForm td.label {
@@ -1263,7 +1271,7 @@ table.gwittir-BoundTable tr.odd {
 	background-color: #F0F0FE;
 }
 
-table.gwittir-BoundTable tr.even.selected,table.gwittir-BoundTable tr.odd.selected
+table.gwittir-BoundTable tr.even.selected, table.gwittir-BoundTable tr.odd.selected
 	{
 	font-weight: bold;
 }
@@ -1313,7 +1321,7 @@ table.gwittir-BoundTable tr.header {
 	color: red;
 }
 /** editable overlay **/
-table.gwittir-BoundTable.editable tr.even td.editableOver,table.gwittir-BoundTable.editable tr.odd td.editableOver
+table.gwittir-BoundTable.editable tr.even td.editableOver, table.gwittir-BoundTable.editable tr.odd td.editableOver
 	{
 	background-color: #F4F4F4;
 	cursor: pointer;
@@ -1362,8 +1370,8 @@ table.gwittir-BoundTable.editable tr.odd td {
 	width: 230px;
 }
 
-.alcina-Notification a,.alcina-Notification a:active,.alcina-Notification a:link
-	{
+.alcina-Notification a, .alcina-Notification a:active,
+	.alcina-Notification a:link {
 	color: #1111cc;
 }
 
@@ -1372,7 +1380,7 @@ table.gwittir-BoundTable.editable tr.odd td {
 	padding-right: 10px;
 }
 
-.alcina-Notification .info,.alcina-Notification .warning {
+.alcina-Notification .info, .alcina-Notification .warning {
 	text-align: left;
 }
 
@@ -1445,8 +1453,8 @@ table.gwittir-BoundTable.editable tr.odd td {
 	padding: 5px;
 }
 
-.alcina-expandableLabel a,.alcina-expandableLabel a:link,.alcina-expandableLabel a:visited,.alcina-expandableLabel a:active
-	{
+.alcina-expandableLabel a, .alcina-expandableLabel a:link,
+	.alcina-expandableLabel a:visited, .alcina-expandableLabel a:active {
 	text-decoration: none;
 }
 
@@ -1527,8 +1535,8 @@ div.max .gwt-RichTextArea {
 }
 
 /** more misc - added 2011.08.24 **/
-a.link-no-underline:link,a.link-no-underline:visited,a.link-no-underline:active,a.link-no-underline
-	{
+a.link-no-underline:link, a.link-no-underline:visited, a.link-no-underline:active,
+	a.link-no-underline {
 	text-decoration: none;
 }
 
@@ -1542,7 +1550,7 @@ div.popdown-select {
 	background-color: white;
 }
 
-div.popdown-select a,div.popdown-select a:link {
+div.popdown-select a, div.popdown-select a:link {
 	color: #555;
 	font-size: 0.9em;
 	white-space: nowrap;
@@ -1654,7 +1662,7 @@ div.popdown-select a:hover {
 	white-space: normal;
 }
 
-.gwt-RadioButton,.gwt-CheckBox {
+.gwt-RadioButton, .gwt-CheckBox {
 	white-space: nowrap;
 }
 
@@ -1678,12 +1686,12 @@ textarea.hint {
 	color: #777;
 }
 
-.alcina-BeanPanel.pwo-center-buttons  .alcina-SavePanel,.button-panel {
+.alcina-BeanPanel.pwo-center-buttons  .alcina-SavePanel, .button-panel {
 	text-align: center;
 	margin-top: 2em;
 }
 
-.alcina-BeanPanel.pwo-center-buttons  .alcina-SavePanel button,button.flat
+.alcina-BeanPanel.pwo-center-buttons  .alcina-SavePanel button, button.flat
 	{
 	background: #E9E9E9;
 	border: 1px solid #CDCDCD;
@@ -1695,13 +1703,13 @@ textarea.hint {
 	min-width: 5em;
 }
 
-.alcina-BeanPanel.pwo-center-buttons  .alcina-SavePanel button:hover,button.flat:hover
-	{
+.alcina-BeanPanel.pwo-center-buttons  .alcina-SavePanel button:hover,
+	button.flat:hover {
 	background: #DDD;
 	border: 1px solid #AAA;
 }
 
-.monospace,.monospace textarea {
+.monospace, .monospace textarea {
 	font-family: monospace;
 	font-size: 125%;
 }
