* Make some general widget class no-arg constructible * Change filter hint css

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1063,8 +1063,8 @@ div.alcina-FilterHolder.inlineFilter {
 }
 
 input.alcina-FilterHint {
-	color: #666666;
-	font-style: italic;
+	color: #aaa;
+	font-style: normal;
 }
 
 .alcina-Filter-collapse {
