--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -895,6 +895,11 @@ table.alcina-SelectorFrame.minimal .selectx .text {
 table.alcina-SelectorFrame.minimal .caption-hint {
 	font-style: italic;
 }
+
+div.alcina-SelectorContainer .unselected-text {
+	color: rgb(120, 163, 182);
+	padding: 0.5em 1em;
+}
 /*Object tree rendering */
 div.alcina-ObjectTree .customiser {
 	margin-bottom: 15px;
@@ -1492,15 +1497,15 @@ div.max .gwt-RichTextArea {
 .dropdown-popup .popupContent {
 	background-color: #fff;
 	border: 1px solid #bbb;
-	text-align:left;
+	text-align: left;
 }
 
 .dropdown-popup .popupTopLeft {
-
+	
 }
 
 .dropdown-popup .popupTopRight {
-
+	
 }
 
 .dropdown-popup .popupMiddleLeft {
@@ -1639,7 +1644,7 @@ div.popdown-select a:hover {
 }
 
 .gwt-SliderBar-shell-focused {
-
+	
 }
 
 .gwt-SliderBar-shell .gwt-SliderBar-line-sliding {
