sync and equivalence progress make alcina date get compatible with ejb

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1840,3 +1840,7 @@ div.gwt-PopupPanel.bubble .bubble-up {
 .flat-search-row .operator .alcina-SelectorContainer {
 	min-width: 100px;
 }
+
+input.alcina-Filter {
+	width: calc(100% - 15px);
+}
