local dom - more correct (tree syncing) approach

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -206,7 +206,9 @@ div.alcina-BreadcrumbBar.tlr-borders {
 	border: 1px solid #cecece;
 	border-bottom: none;
 }
-
+div.alcina-BreadcrumbBar p span{
+	display:block;
+}
 div.alcina-BreadcrumbBar div.right {
 	float: right;
 	padding-left: 3px;
