More editable table work

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1269,6 +1269,9 @@ table.gwittir-GridForm td.label {
 	vertical-align: middle;
 	white-space: nowrap;
 }
+table.gwittir-GridForm.suppress-field-labels > tbody > tr > td.label {
+	display: none;
+}
 
 table.gwittir-GridForm td.label.multiline-field {
 	vertical-align: top;
