--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -358,12 +358,12 @@ a.button-grey,a.button-grey:active,a.button-grey:visited,a.button-grey.disabled:
 	background: #e9e9e9;
 	border: 1px solid #cdcdcd;
 	color: #333333;
-	padding: 5px;
+	padding: 12px 14px 4px;
 	margin-right: 6px;
 	display: block;
 	float: left;
 	text-decoration: none;
-	line-height: 1em;
+	line-height: 18px;
 }
 
 a.button-grey.disabled,a.button-grey.disabled:hover {
@@ -389,12 +389,8 @@ a.button-grey.disabled,a.button-grey.disabled:hover {
 
 a.button-grey:hover,.alcina-ToolbarSmall a.button-grey:hover {
 	color: #333333;
-	background: #ffffff url(_pix/bg-button-large-grey.gif) bottom left
-		repeat-x;
-	border-left: 1px solid #ffffff;
-	border-top: 1px solid #ffffff;
-	border-right: 1px solid #919191;
-	border-bottom: 1px solid #919191;
+	background-color: #f1f1f1;
+	border: 1px solid #919191;
 }
 
 /* Button icons */
