--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1864,7 +1864,7 @@ input.alcina-Filter {
 
 div.has-help-text span:after {
 	content: ' (*)';
-	vertical-align: super;
+	font-size: 85%;
 	padding-left: 0.5em;
 }
 
