Add per-site top bar message

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1885,3 +1885,11 @@ button, .gwt-Button{
 .action-view-button{
 	margin-left: 20px;
 }
+.alcina-MainMenu{
+	position: relative;
+}
+.alcina-MainMenu .site-message{
+	display: none;
+	position: absolute;
+	
+}
