--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -353,7 +353,10 @@ div.gwt-TabBarItem input:focus,div.gwt-TabBarItem input {
 }
 
 /* Buttons ######################################################### */
-a.button-grey,a.button-grey:active,a.button-grey:visited,a.button-grey.disabled:hover
+.v2 a.button-grey,
+.v2 a.button-grey:active,
+.v2 a.button-grey:visited,
+.v2 a.button-grey.disabled:hover
 	{
 	background: #e9e9e9;
 	border: 1px solid #cdcdcd;
@@ -366,6 +369,18 @@ a.button-grey,a.button-grey:active,a.button-grey:visited,a.button-grey.disabled:
 	line-height: 18px;
 }
 
+a.button-grey,a.button-grey:active,a.button-grey:visited,a.button-grey.disabled:hover
+	{
+	background: #e9e9e9;
+	border: 1px solid #cdcdcd;
+	color: #333333;
+	padding: 5px;
+	margin-right: 6px;
+	display: block;
+	float: left;
+	text-decoration: none;
+	line-height: 1em;
+}
 a.button-grey.disabled,a.button-grey.disabled:hover {
 	color: #777777;
 }
@@ -387,12 +402,21 @@ a.button-grey.disabled,a.button-grey.disabled:hover {
 	padding: 3px;
 }
 
-a.button-grey:hover,.alcina-ToolbarSmall a.button-grey:hover {
+.v2 a.button-grey:hover,.v2 .alcina-ToolbarSmall a.button-grey:hover {
 	color: #333333;
 	background-color: #f1f1f1;
 	border: 1px solid #919191;
 }
 
+a.button-grey:hover,.alcina-ToolbarSmall a.button-grey:hover {
+	color: #333333;
+	background: #ffffff url(_pix/bg-button-large-grey.gif) bottom left
+		repeat-x;
+	border-left: 1px solid #ffffff;
+	border-top: 1px solid #ffffff;
+	border-right: 1px solid #919191;
+	border-bottom: 1px solid #919191;
+}
 /* Button icons */
 a.b-viewing-options span {
 	background: url(_pix/icon-viewing-options.gif) 0 0 no-repeat;
@@ -1876,7 +1900,7 @@ div.has-help-text:hover {
 div.has-help-text:hover span:after {
 	visibility: hidden
 }
-button, .gwt-Button{
+.alcina-BeanPanel button, .alcina-BeanPanel .gwt-Button{
 	padding: 4px 9px 4px;
 	font-size:inherit;
 	background:#f0f0f0;
