Tweak searchviewprovider; rpc issue logging

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -951,6 +951,7 @@ div.alcina-ObjectTree {
 	font-size: 0.9em;
 	padding-left: 10px;
 	padding-bottom: 10px;
+	padding-top:10px;
 }
 
 div.alcina-ObjectTree.no-border {
