--- a/framework/gwt/src/cc/alcina/framework/gwt/client/data/view/res/dataclient.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/data/view/res/dataclient.css
@@ -269,7 +269,7 @@ input.alcina-Filter {
 
 div.def-filter {
 	padding: 6px 8px 4px;
-	background-color: #dbe6f4;
+	background-color: hsl(36, 53%, 91%);
 }
 
 .pane-container {
@@ -565,14 +565,14 @@ table.flat-search  div.alcina-Selector.selected a:hover {
 	width: 22px;
 	height: 22px;
 	text-align: center;
-	background-color: #6aa1e6;
+	background-color: hsl(36, 71%, 66%);
 	color: #f3f3f3;
 	font-weight: bold;
 	padding: 2px 7px;
 }
 
 .flat-search-row .alcina-Button[disabled] {
-	background-color: #9bbce6;
+	background-color: hsl(36, 60%, 75%);
 	color: #e7e7e7;
 }
 
