--- a/extras/dev/src/cc/alcina/extras/dev/console/remote/client/common/widget/nav/res/nav.css
+++ b/extras/dev/src/cc/alcina/extras/dev/console/remote/client/common/widget/nav/res/nav.css
@@ -16,6 +16,7 @@
 	border-bottom-style: solid;
 }
 
+
 .nav-module .bar .center {
 	height: 28px;
 	width: var(- -nav-bar-center-width);
@@ -43,4 +44,20 @@
 	font-size: 18px;
 	padding: 3px;
 	color: var(- -nav-bar-button-color);
+}
+
+/*
+manual hackies
+*/
+.nav-module .bar {
+    width: 100%;
+    background-color: hsla(102, 27%, 85%, 1);
+    height: 36px;
+    border-bottom-color: hsla(148, 60%, 34%, 1);
+    /* box-shadow: 0px 1px 2px 0px rgba(50, 50, 50, 0.55); */
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    padding: 6px 0 0;
+    position: relative;
+    font-family: 'Montserrat', Arial;
 }
