Change validation styles

--- a/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
+++ b/framework/gwt/src/cc/alcina/framework/gwt/client/res/Alcina.css
@@ -1020,6 +1020,7 @@ table.results-table {
 	color: #F33;
 	text-align: left;
 	background-color: #FEE;
+	white-space: pre-wrap;
 }
 
 .popupContent {
